# raspimouse_description

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
.github/workflows/: industrial_ci.yml
config/: diffdrive_controller.yaml
launch/: display.launch.py  display_urdf.launch  display_xacro.launch  load_xacro.launch
launch/config/: urdf.rviz
meshes/dae/body/: raspimouse_body.dae
meshes/dae/sensor/: urg_bottom_origin.dae  urg_optical_axis_center_origin.dae
meshes/dae/wheel/: raspimouse_wheel.dae
meshes/stl/: RasPiMouse_MultiLiDARMount.stl
raspimouse_description/: robot_description_loader.py
test/: test_robot_description_loader.py
urdf/: common.xacro  raspimouse.gazebo_ros2_control.xacro  raspimouse.urdf  raspimouse.urdf.xacro  raspimouse_with_urg.urdf
urdf/body/: body.urdf.xacro  body_urg.urdf.xacro  option.urdf.xacro
urdf/sensors/: lidar.gazebo.xacro  lidar.urdf.xacro  lightsens.gazebo.xacro  lightsens.urdf.xacro  lrf.gazebo.xacro  lrf.urdf.xacro  rgb_camera.xacro
urdf/wheel/: diffdrive.gazebo.xacro  diffdrive.gazebo_ros2_control.xacro  wheel.urdf.xacro
