<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raspimouse_description</name>
  <version>1.2.0</version>
  <description>The raspimouse_description package</description>
  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>

  <license>MIT</license>
  
  <author email="daisuke.sato@rt-net.jp">Daisuke Sato</author>
  <author email="s.aoki@rt-net.jp">Shota Aoki</author>
  <author email="yusuke.kato@rt-net.jp">Yusuke Kato</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>launch</depend>
  <depend>ign_ros2_control</depend>
  <depend>realsense2_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>
</package>
